--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -9,11 +9,11 @@ title = "AndyFriar.com"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = "https://www.andyfriar.com"
+baseurl = "https://www.andyfriar.com/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
-copyright = ""
+copyright = "© {year} Andy Friar"
 
 # Enable analytics by entering your Google Analytics tracking ID
 googleAnalytics = "UA-38587674-1"
